# Cadder

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AGENTS_DEBUG.md  CONTRIBUTING.md  Cadder.slnx  Cargo.toml  Directory.Build.props  README.md  SECURITY.md  build.ps1
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
backlog/: config.yml
backlog/milestones/: m-2 - v1.0.md  m-3 - v2.0.md  m-4 - v1.1.md
backlog/tasks/: task-1 - Build-Cadder-persistent-Caddy-tray-daemon.md  task-1.1 - Define-Cadder-architecture-and-scaffold-the-app.md  task-1.10 - Build-per-domain-logs-UI.md  task-1.11 - Package-PATH-installation-and-caddy.exe-shadowing.md  task-1.12 - Add-end-to-end-lifecycle-and-GUI-verification.md  task-1.13 - Expand-project-README-with-banner.md  task-1.14 - Use-logo-asset-for-tray-and-executable-icons.md  task-1.15 - Add-GitHub-CI-CD-for-app-and-installer-builds.md  task-1.16 - Build-Astro-Starlight-documentation-site.md  task-1.17 - Define-and-enforce-test-coverage-gate.md  task-1.18 - Support-detached-backend-mode-with-multiple-dashboards.md  task-1.19 - Add-Testcontainers-end-to-end-coverage-before-1.0.md  task-1.2 - Implement-single-instance-daemon-lifecycle.md  task-1.20 - Polish-cadder-tui-navigation-refresh-settings-and-visual-clarity-before-1.0.md  task-1.21 - Add-Windows-IIS-domain-handoff-controls-to-cadder-tui.md  task-1.22 - Polish-Cadder-documentation-for-user-first-portable-usage.md  task-1.23 - Let-cadder-tui-recover-and-start-cadderd-when-the-daemon-is-unavailable.md  task-1.24 - Support-mixed-elevation-operations-with-minimal-admin-prompting.md  task-1.25 - Rename-repository-slug-to-lowercase-cadder-before-1.0.md  task-1.3 - Implement-the-caddy.exe-shim-registration-flow.md  task-1.4 - Build-IPC-and-owner-aware-registration-store.md  task-1.5 - Compose-and-reload-Caddy-config-from-registrations.md  task-1.6 - Manage-real-Caddy-runtime-and-health.md  task-1.7 - Implement-per-domain-log-capture-and-query.md  task-1.8 - Build-Cadder-tray-popup-UI.md  task-1.9 - Build-Cadder-panel-overview-and-registry-pages.md  task-2 - Make-Cadder-universal-for-local-and-remote-environments.md  task-2.1 - Define-remote-daemon-pairing-and-trust-model.md  task-2.2 - Configure-remote-Caddy-through-paired-daemons.md  task-2.3 - Negotiate-backend-ports-and-expose-selected-ports-to-hosted-processes.md  task-2.4 - Register-Cadder-routes-in-Pi-hole-DNS.md  task-2.5 - Build-remote-web-management-dashboard.md  task-2.6 - Build-local-tray-and-egui-desktop-management-app.md  task-2.7 - Aggregate-local-and-paired-remote-entities-across-TUI-web-and-desktop-UI.md  task-2.8 - Add-quick-certificate-management-for-local-and-paired-remote-domains.md  task-3 - Add-repository-link-to-documentation-and-fix-README-docs-links.md
crates/cadder-daemon/: Cargo.toml
crates/cadder-daemon/src/: caddy.rs  config.rs  iis.rs  ipc.rs  lib.rs  logs.rs  paths.rs  runtime.rs  state.rs
crates/cadder-daemon/tests/: ipc_lifecycle.rs  testcontainers_e2e.rs
crates/cadder-protocol/: Cargo.toml
crates/cadder-protocol/src/: lib.rs
crates/cadder-shim/: Cargo.toml
crates/cadder-shim/src/: main.rs
crates/cadder-tui/: Cargo.toml
crates/cadder-tui/src/: main.rs  model.rs
crates/cadderd/: Cargo.toml
crates/cadderd/src/: main.rs
docs/: ARCHITECTURE.md
docs/site/: README.md  astro.config.mjs  package.json  tsconfig.json
docs/verification/: testcontainers-e2e.md  tui-smoke.md
src/Cadder.CaddyShim/: Cadder.CaddyShim.csproj  Program.cs  ShimDaemonConnection.cs  ShimDaemonStartup.cs  ShimEntrypoint.cs  ShimRegistration.cs  ShimRunCommand.cs  ShimRuntime.cs
src/Cadder.Contracts/: CadderRoles.cs  DomainContracts.cs  IpcContracts.cs  IpcPipeProtocol.cs
src/Cadder.Daemon/: BoundedCaddyLogSink.cs  Cadder.Daemon.csproj  CadderIpcEndpoint.cs  CaddyAdaptedConfig.cs  CaddyConfigCoordinator.cs  CaddyJsonConfigComposer.cs  CaddyJsonConfigInspector.cs  CaddyLogRedactor.cs  CaddyRuntimeLogParser.cs  DaemonBoundaries.cs  DaemonLifecycle.cs  DaemonRegistrationStore.cs  DaemonSingleton.cs  GuiStateBroadcaster.cs  InMemoryCaddyLogStore.cs  NamedPipeDaemonIpcServer.cs  ProcessCaddyfileConfigAdapter.cs  ProcessRealCaddyRuntimeAdapter.cs  RegistrationOwnerWatcher.cs
src/Cadder.Tray.WinUI/: App.xaml  App.xaml.cs  Cadder.Tray.WinUI.csproj  DaemonTrayPresence.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PanelState.cs  PanelStateStore.cs  Program.cs  TrayPopupPositioner.cs  TrayPopupState.cs  TrayPopupWindow.xaml  TrayPopupWindow.xaml.cs  app.manifest
tests/Cadder.Contracts.Tests/: Cadder.Contracts.Tests.csproj  ContractShapeTests.cs
tests/Cadder.Daemon.Tests/: Cadder.Daemon.Tests.csproj  CadderIpcEndpointTests.cs  CaddyConfigCoordinatorTests.cs  CaddyLogStoreTests.cs  (+9 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+42 files in other folders)
