[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
flate2 = "=1.1.9"
hex = "=0.4.3"
sha2 = "=0.11.0"
tar = "=0.4.46"
zip = { version = "=8.6.0", default-features = false, features = ["deflate-flate2"] }
