[package]
name = "cadder-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
cadder-protocol = { version = "0.1.0", path = "../cadder-protocol" }
chrono = { version = "0.4.45", features = ["serde"] }
directories = "6.0.0"
fs4 = "1.1.0"
hex = "0.4.3"
interprocess = { version = "2.4.2", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
