[package]
name = "cadder-shim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "caddy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
cadder-daemon = { version = "0.1.0", path = "../cadder-daemon" }
cadder-protocol = { version = "0.1.0", path = "../cadder-protocol" }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
