[package]
name = "cadder-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
cadder-daemon = { version = "0.1.0", path = "../cadder-daemon" }
cadder-protocol = { version = "0.1.0", path = "../cadder-protocol" }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.1"
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"
