[package]
name = "cadder-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadder terminal UI for daemon state, domains, logs, and diagnostics"

[dependencies]
anyhow = "1.0.102"
cadder-daemon = { version = "0.8.0", path = "../cadder-daemon" }
cadder-protocol = { version = "0.8.0", path = "../cadder-protocol" }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.1"
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"
