[package]
name = "cadderd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadder per-user Caddy coordinator daemon"

[dependencies]
anyhow = "1.0.102"
cadder-daemon = { version = "0.8.0", path = "../cadder-daemon" }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"
